# fs-rs

./: Cargo.toml  README.md
src/: cli.rs  dialogue.rs  displaying.rs  error.rs  filter.rs  lib.rs  main.rs  search.rs
