[package]
name = "fs-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.3"
clap = { version = "4.3.8", features = ["derive"] }
crossterm = "0.26.1"
inquire = "0.6.2"
opener = { version = "0.6.1", features = ["reveal"] }